--- a/apko.yaml
+++ b/apko.yaml
@@ -1,14 +1,15 @@
 contents:
   packages:
-    - ca-certificates-bundle
-    - tzdata
+    # So we have a shell and posix tools
+    - busybox
+    # This is how Cloud Workstations connects to the container.
+    - openssh-server
+    # To do stuff with GCP (this is super fat)
+    - google-cloud-sdk
+    # TODO(mattmoor): Get this working, but sudo-rs and PAM don't get along.
+    - sudo-rs
 
-accounts:
-  groups:
-    - groupname: nonroot
-      gid: 65532
-  users:
-    - username: nonroot
-      uid: 65532
-      gid: 65532
-  run-as: 65532
+entrypoint:
+  command: /bin/sh
+
+cmd: -c "(yes | ssh-keygen -q -f /etc/ssh/ssh_host_rsa_key -t rsa -C 'host' -N '' ) && (adduser -D user -s /bin/bash) && passwd -d user && (echo 'user            ALL = (ALL) NOPASSWD: ALL' >> /etc/sudoers) && mkdir /var/empty && (echo 'PermitEmptyPasswords yes' > /etc/ssh/sshd_config) && /usr/sbin/sshd && sleep infinity"
