split into modules, apply the image separately
Signed-off-by: Jason Hall <jason@chainguard.dev>

--- a/.github/workflows/pre-submit.yaml
+++ b/.github/workflows/pre-submit.yaml
@@ -27,4 +27,4 @@ jobs:
     - run: |
         export TF_VAR_target_repository=localhost:5000/apko
         terraform init
-        terraform apply -auto-approve
+        terraform apply -auto-approve -target=module.image
